--- a/cv-new.html
+++ b/cv-new.html
@@ -3,146 +3,164 @@
 
 <head>
     <!--<meta charset="UTF-8">-->
-    <meta name='viewport'
-      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>cv-new</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-
     <div class="bg-image"></div>
-
-
     <div id="page">
-
-
-        <div class="left">
-
+        <div id="left">
             <img class="img" src="image/lusi.jpg" width="230px" />
-
             <br>
-
             <h1 class="name">LUSINE HOVAKIMYAN</h1>
             <br>
             <hr class="line1">
             <hr class="line2">
-
             <h2 class="web-developer">WEB DEVELOPER</h2>
-
             <p class="mail">e-mail: matasamathi@gmail.com<br>mob: +34 636 429 048<br>current location: Barcelona, Spain
                 <p />
-
                 <p class="about">Creative, good team player, curious, excellent communication and presentation skills, good problem solving skills, high accuracy and focus level, result oriented.</p>
-
         </div>
-
-
-        <div class="right">
-
-
-            <div id="edu">
-                <h2 class="education">EDUCATION</h2>
-
-                <p class="y1"><b>1996-2000</b></p>
-
-                <p class="bd"><b>
-                        <font size="3">
-                            <font color="#086b69">Bachelor Degree</font>
-                        </font>
-                    </b><br>Yerevan State University<br>Language and Literature Department
-                    <br />Philologist, professor of Armenian Language and <br />Literature (BD)</p>
-
-
-                <p class="y2"><b>1994-1996</b></p>
-
-                <p class="qc"><b>
-                        <font size="3">
-                            <font color="#086b69">Quantum College</font>
-                        </font>
-                    </b><br>Education according to the International<br>Baccalaureate (IB)<br>Diploma Programme</p>
-            </div>
-
-
-            <div id="ex">
-                <h2 class="experiance">EXPERIANCE</h2>
-
-                <p class="y3"><b>2010-2016</b></p>
-                <p class="gd1"><b>
-                        <font size="3">
-                            <font color="#086b69">Graphic Designer</font>
-                        </font>
-                    </b><br>Nikita Mobile LLC, Yerevan, Armenia</p>
-
-                <p class="y4"><b>2008-2010</b></p>
-                <p class="gd2"><b>
-                        <font size="3">
-                            <font color="#086b69">Graphic Designer</font>
-                        </font>
-                    </b><br>Yerevan State Medical University</p>
-
-                <p class="y5"><b>2003-2008</b></p>
-                <p class="jr"><b>
-                        <font size="3">
-                            <font color="#086b69">Journalist/Reporter</font>
-                        </font>
-                    </b><br>Yerevan State Medical University</p>
-
-            </div>
-
-
+        <div id="right">
             <div class="square1"></div>
+            <h2 class="edu">EDUCATION</h2>
+            <div class="section">
+                <div class="sec-left">
+                    <p class="y1"><b>1996-2000</b></p>
+                </div>
+                <div class="sec-right1">
+                    <p class="bd"><b>
+                            <font size="3">
+                                <font color="#086b69">Bachelor Degree</font>
+                            </font>
+                        </b><br>Yerevan State University<br>Language and Literature Department
+                        <br />Philologist, professor of Armenian Language and <br />Literature (BD)</p>
+                </div>
+            </div>
+            <div class="section">
+                <div class="sec-left">
+                    <p class="y2"><b>1994-1996</b></p>
+                </div>
+                <div class="sec-right2">
+                    <p class="qc"><b>
+                            <font size="3">
+                                <font color="#086b69">Quantum College</font>
+                            </font>
+                        </b><br>Education according to the International<br>Baccalaureate (IB)<br>Diploma Programme</p>
+                </div>
+            </div>
             <div class="square2"></div>
+            <h2 class="block-title">EXPERIENCE</h2>
+            <div class="section">
+                <div class="sec-left">
+                    <p class="y3"><b>2010-2016</b></p>
+                </div>
+                <div class="sec-right3">
+                    <p class="gd1"><b>
+                            <font size="3">
+                                <font color="#086b69">Graphic Designer</font>
+                            </font>
+                        </b><br>Nikita Mobile LLC, Yerevan, Armenia</p>
+                </div>
+            </div>
+            <div class="section">
+                <div class="sec-left">
+                    <p class="y4"><b>2008-2010</b></p>
+                </div>
+                <div class="sec-right4">
+                    <p class="gd2"><b>
+                            <font size="3">
+                                <font color="#086b69">Graphic Designer</font>
+                            </font>
+                        </b><br>Yerevan State Medical University</p>
+                </div>
+            </div>
+            <div class="section">
+                <div class="sec-left">
+                    <p class="y5"><b>2003-2008</b></p>
+                </div>
+                <div class="sec-right4">
+                    <p class="gd2"><b>
+                            <font size="3">
+                                <font color="#086b69">Journalist/Reporter</font>
+                            </font>
+                        </b><br>Yerevan State Medical University</p>
+                </div>
+            </div>
             <div class="square3"></div>
-            <div class="square04"></div>
-
-
-
-            <div class="skills">
-                <h2 class="sk">SKILLS</h2>
-                <p class="photoshop"><b>Adobe Photoshop<br></b></p>
-                <p class="corel"><b>CorelDRAW</b></p>
-                <div class="square4"></div>
-                <div class="square5"></div>
-                <div class="square6"></div>
-                <div class="square7"></div>
-
-                <!--
-        <p class="html"><b>HTML</b></p> 
-        <p class="css"><b>CSS</b></p>   
-        -->
-
-
+            <h2 class="block-title">SKILLS</h2>
+            <div class="section">
+                <div class="sec-left">
+                    <p class="photoshop"><b>Adobe Photoshop</b></p>
+                </div>
+                <div class="sec-right">
+                    <div class="square4"></div>
+                    <div class="square5"></div>
+                </div>
             </div>
-
-
-
-            <div class="languages">
-                <h2 class="lang">LANGUAGES</h2>
-                <p class="e"><b>English<br></b></p>
-                <p class="s"><b>Spanish</b></p>
-                <p class="f"><b>Franch<br></b></p>
-                <p class="r"><b>Russian</b></p>
-                <div class="square8"></div>
-                <div class="square9"></div>
-                <div class="square10"></div>
-                <div class="square11"></div>
-                <div class="square12"></div>
-                <div class="square13"></div>
-                <div class="square14"></div>
-                <div class="square15"></div>
-
-
-
+            <div class="section">
+                <div class="sec-left">
+                    <p class="html"><b>HTML</b></p>
+                </div>
+                <div class="sec-right">
+                    <div class="square6"></div>
+                    <div class="square7"></div>
+                </div>
             </div>
-
-
-
+            <div class="section">
+                <div class="sec-left">
+                    <p class="css"><b>CSS</b></p>
+                </div>
+                <div class="sec-right">
+                    <div class="square8"></div>
+                    <div class="square9"></div>
+                </div>
+            </div>
+            <div class="square10"></div>
+            <h2 class="block-title">LANGUAGES</h2>
+            <div class="section">
+                <div class="sec-left">
+                    <p class="e"><b>English</b></p>
+                </div>
+                <div class="sec-right">
+                    <div class="square11"></div>
+                    <div class="square12"></div>
+                </div>
+            </div>
+            <div class="section">
+                <div class="sec-left">
+                    <p class="s"><b>Spanish</b></p>
+                </div>
+                <div class="sec-right">
+                    <div class="square13"></div>
+                    <div class="square14"></div>
+                </div>
+            </div>
+            <div class="section">
+                <div class="sec-left">
+                    <p class="f"><b>Russian</b></p>
+                </div>
+                <div class="sec-right">
+                    <div class="square15"></div>
+                    <div class="square16"></div>
+                </div>
+            </div>
+            <div class="section">
+                <div class="sec-left">
+                    <p class="r"><b>Franch</b></p>
+                </div>
+                <div class="sec-right">
+                    <div class="square17"></div>
+                    <div class="square18"></div>
+                </div>
+            </div>
         </div>
-
     </div>
+
 </body>
 
 </html>
